--- a/_posts/Foundation/C-github_pages/2025-08-21-github_pages_jokes.ipynb
+++ b/_posts/Foundation/C-github_pages/2025-08-21-github_pages_jokes.ipynb
@@ -21,15 +21,8 @@
    "id": "17699de9",
    "metadata": {},
    "source": [
-    "## Running Jupyter Notebooks\n",
-    "\n",
-    "Let's have a laugh while we test out JavaScript in Jupyter Notebooks.\n",
-    "\n",
-    "- In VSCode, go to **Help->Toggle Developer Tools**\n",
-    "- Click on **Console** in the newly opened Window\n",
-    "- Clear screen by pressing **Clear Console** (circle with line)\n",
-    "- Then press **Play button** to left of cells below\n",
-    "- Observe random output in the Console\n"
+    "hello\n",
+    "\n"
    ]
   },
   {
@@ -44,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c5ab8476",
    "metadata": {
     "vscode": {
@@ -64,7 +57,7 @@
     }
    ],
    "source": [
-    "%%javascript\n",
+    "javascript\n",
     "\n",
     "var compsci_joke_list = [\n",
     "    { joke: \"Why do programmers prefer dark mode? Because light attracts bugs.\", complexity: \"1\" },\n",
@@ -93,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "47a6b112",
    "metadata": {
     "vscode": {
@@ -113,7 +106,7 @@
     }
    ],
    "source": [
-    "%%javascript\n",
+    "javascript\n",
     "\n",
     "var accounting_joke_list = [\n",
     "    \"Why did the accountant cross the road? To bore the people on the other side.\",\n",
