--- a/_notebooks/Foundation/C-github_pages/2025-08-21-github_pages_jokes.ipynb
+++ b/_notebooks/Foundation/C-github_pages/2025-08-21-github_pages_jokes.ipynb
@@ -21,8 +21,15 @@
    "id": "17699de9",
    "metadata": {},
    "source": [
-    "hello\n",
-    "\n"
+    "## Running Jupyter Notebooks\n",
+    "\n",
+    "Let's have a laugh while we test out JavaScript in Jupyter Notebooks.\n",
+    "\n",
+    "- In VSCode, go to **Help->Toggle Developer Tools**\n",
+    "- Click on **Console** in the newly opened Window\n",
+    "- Clear screen by pressing **Clear Console** (circle with line)\n",
+    "- Then press **Play button** to left of cells below\n",
+    "- Observe random output in the Console\n"
    ]
   },
   {
@@ -37,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c5ab8476",
    "metadata": {
     "vscode": {
@@ -57,7 +64,7 @@
     }
    ],
    "source": [
-    "javascript\n",
+    "%%javascript\n",
     "\n",
     "var compsci_joke_list = [\n",
     "    { joke: \"Why do programmers prefer dark mode? Because light attracts bugs.\", complexity: \"1\" },\n",
@@ -86,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "47a6b112",
    "metadata": {
     "vscode": {
@@ -106,7 +113,7 @@
     }
    ],
    "source": [
-    "javascript\n",
+    "%%javascript\n",
     "\n",
     "var accounting_joke_list = [\n",
     "    \"Why did the accountant cross the road? To bore the people on the other side.\",\n",
