--- a/_notebooks/Foundation/C-github_pages/2025-08-21-github_pages_jokes.ipynb
+++ b/_notebooks/Foundation/C-github_pages/2025-08-21-github_pages_jokes.ipynb
@@ -1,7 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80b568f0",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9688143",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "2eddaec8",
    "metadata": {},
    "source": [
@@ -44,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c5ab8476",
    "metadata": {
     "vscode": {
@@ -64,8 +88,13 @@
     }
    ],
    "source": [
-    "%%javascript\n",
+    "%%html\n",
+    "<div>\n",
+    "    <h3>Random Computer Science Joke</h3>\n",
+    "    <p id=\"computer_joke\"></p>\n",
+    "</div>\n",
     "\n",
+    "<script>\n",
     "var compsci_joke_list = [\n",
     "    { joke: \"Why do programmers prefer dark mode? Because light attracts bugs.\", complexity: \"1\" },\n",
     "    { joke: \"Why do Java developers wear glasses? Because they don't see sharp.\", complexity: \"2\" },\n",
@@ -78,7 +107,10 @@
     "];\n",
     "var randomIndex = Math.floor(Math.random() * compsci_joke_list.length);\n",
     "var selectedJoke = compsci_joke_list[randomIndex];\n",
-    "console.log(\"Joke #\" + (randomIndex + 1) + \": \" + selectedJoke.joke + \" (Complexity: \" + selectedJoke.complexity + \")\");"
+    "var msg = \"Joke #\" + (randomIndex + 1) + \": \" + selectedJoke.joke + \" (Complexity: \" + selectedJoke.complexity + \")\";\n",
+    "console.log(msg);\n",
+    "document.getElementById(\"computer_joke\").innerText = msg;\n",
+    "</script>\n"
    ]
   },
   {
@@ -93,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "47a6b112",
    "metadata": {
     "vscode": {
@@ -103,9 +135,35 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\nvar accounting_joke_list = [\n    \"Why did the accountant cross the road? To bore the people on the other side.\",\n    \"What do accountants do when they're constipated? They work it out with a pencil.\",\n    \"How does an accountant stay out of debt? He learns to act his wage.\",\n    \"Why did the accountant stare at his glass of orange juice for three hours? Because on the box it said 'concentrate'.\",\n    \"Why did the accountant get promoted? Because he knew how to balance his work and play.\",\n    \"Why did the accountant go broke? Because he lost his balance.\",\n    \"Why did the accountant get a job at the bakery? Because he was good at making dough.\",\n    \"Why did the accountant get a job at the zoo? Because he was good with cheetahs.\",\n    \"Why did the accountant get a job at the library? Because he was good at keeping books.\",\n    \"Why did the accountant get a job at the circus? Because he was good at juggling numbers.\",\n    \"Why did the accountant get a job at the gym? Because he was good at working out the numbers.\",\n    \"Why did the accountant get a job at the farm? Because he was good at counting the chickens before they hatched.\"\n]\nvar randomIndex = Math.floor(Math.random() * accounting_joke_list.length);\nconsole.log(\"Joke #\" + (randomIndex + 1) + \": \" + accounting_joke_list[randomIndex]);\n",
+      "text/html": [
+       "<div>\n",
+       "    <h3>Random Accounting Joke</h3>\n",
+       "    <p id=\"accounting_joke\"></p>\n",
+       "</div>\n",
+       "\n",
+       "<script>\n",
+       "var accounting_joke_list = [\n",
+       "    \"Why did the accountant cross the road? To bore the people on the other side.\",\n",
+       "    \"What do accountants do when they're constipated? They work it out with a pencil.\",\n",
+       "    \"How does an accountant stay out of debt? He learns to act his wage.\",\n",
+       "    \"Why did the accountant stare at his glass of orange juice for three hours? Because on the box it said 'concentrate'.\",\n",
+       "    \"Why did the accountant get promoted? Because he knew how to balance his work and play.\",\n",
+       "    \"Why did the accountant go broke? Because he lost his balance.\",\n",
+       "    \"Why did the accountant get a job at the bakery? Because he was good at making dough.\",\n",
+       "    \"Why did the accountant get a job at the zoo? Because he was good with cheetahs.\",\n",
+       "    \"Why did the accountant get a job at the library? Because he was good at keeping books.\",\n",
+       "    \"Why did the accountant get a job at the circus? Because he was good at juggling numbers.\",\n",
+       "    \"Why did the accountant get a job at the gym? Because he was good at working out the numbers.\",\n",
+       "    \"Why did the accountant get a job at the farm? Because he was good at counting the chickens before they hatched.\"\n",
+       "]\n",
+       "var randomIndex = Math.floor(Math.random() * accounting_joke_list.length);\n",
+       "var joke = \"Joke #\" + (randomIndex + 1) + \": \" + accounting_joke_list[randomIndex];\n",
+       "console.log(joke);\n",
+       "document.getElementById(\"accounting_joke\").innerText = joke;\n",
+       "</script>\n"
+      ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -113,8 +171,13 @@
     }
    ],
    "source": [
-    "%%javascript\n",
+    "%%html\n",
+    "<div>\n",
+    "    <h3>Random Accounting Joke</h3>\n",
+    "    <p id=\"accounting_joke\"></p>\n",
+    "</div>\n",
     "\n",
+    "<script>\n",
     "var accounting_joke_list = [\n",
     "    \"Why did the accountant cross the road? To bore the people on the other side.\",\n",
     "    \"What do accountants do when they're constipated? They work it out with a pencil.\",\n",
@@ -130,7 +193,10 @@
     "    \"Why did the accountant get a job at the farm? Because he was good at counting the chickens before they hatched.\"\n",
     "]\n",
     "var randomIndex = Math.floor(Math.random() * accounting_joke_list.length);\n",
-    "console.log(\"Joke #\" + (randomIndex + 1) + \": \" + accounting_joke_list[randomIndex]);"
+    "var joke = \"Joke #\" + (randomIndex + 1) + \": \" + accounting_joke_list[randomIndex];\n",
+    "console.log(joke);\n",
+    "document.getElementById(\"accounting_joke\").innerText = joke;\n",
+    "</script>"
    ]
   },
   {
